--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # Created by https://www.toptal.com/developers/gitignore/api/swiftpm,swift,xcode
 # Edit at https://www.toptal.com/developers/gitignore?templates=swiftpm,swift,xcode
 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+
 ### Swift ###
 # Xcode
 #
